--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,102 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./colors.scss";
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+body {
+  overflow: overlay;
+}
+
+body,
+html {
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 1080px) {
+  html {
+    // font-size: 70%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    // font-size: 50%;
+  }
+}
+
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1.6rem "Poppins", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+[disabled] {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 600;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+table,
+tr,
+td,
+th {
+  border-collapse: collapse;
+}
+
+// Estilizações padrões da aplicação
+
+.title-page {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+}
+
+.title,
+.subtitle,
+.text {
+  color: $secondary-color;
+}
+
+.title {
+  font-size: 3.2rem;
+}
+
+.subtitle {
+  font-size: 2rem;
+}
